--- a/bitcoin/package.json
+++ b/bitcoin/package.json
@@ -6,7 +6,8 @@
   },
   "dependencies": {
     "big": "^0.5.2",
-    "big.js": "^3.2.0"
+    "big.js": "^3.2.0",
+    "npm": "^5.7.1"
   },
   "devDependencies": {
     "jest": "^22.4.2"
